v1/grafana/6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
annotations:
    ## Anotations bellow doesnt work at all
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: grafana-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - host: devopscheats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana-service
            port: 
              number: 3000
  - host: www.devopscheats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana-service
            port: 
              number: 3000
  tls:
    - hosts:
      - devopscheats.com
      - www.devopscheats.com
      secretName: grafana-secret
